# monthly-challenge

./: README.md  kustomization.yaml
deploy/: deployment.yaml  namespace.yaml  namespace.yml
entries/: example.yaml  test.yaml
utils/: Makefile
utils/trd-202109-collector/: Dockerfile  pyproject.toml
utils/trd-202109-tester/: Dockerfile  README.md  make_env  pyproject.toml  requirements.txt  tester.py
utils/trd-202109-updater/: Dockerfile  make_env  pyproject.toml  requirements.txt  test.sh  updater.py
utils/trd-202109-verifier/: Dockerfile  pyproject.toml  test.sh  verifier.py
