[tool.poetry]
name = "trd-202109-verifier"
version = "0.1.0"
description = ""
authors = ["Ian S Pringle <pard@0x44.pw>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
